--- a/src/Services/Basket/Basket.API/Basket.API.csproj
+++ b/src/Services/Basket/Basket.API/Basket.API.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Carter" Version="8.2.0" />
+    <PackageReference Include="Marten" Version="7.40.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
   </ItemGroup>
 
