--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -13,6 +13,18 @@ services:
     volumes:
       - postgres_catalog:/var/lib/postgresql/data
 
+  basketdb:
+    container_name: basketdb
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=BasketDb
+    restart: always
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_basket:/var/lib/postgresql/data
+
   catalog.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
@@ -33,6 +45,9 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true;
+    depends_on:
+      - basketdb
     ports:
       - "6001:8080"
       - "6061:8081"
