--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
           for SERVICE in $GRPC_SERVICES; do
             SERVICE_LOWER=$(echo $SERVICE | tr '[:upper:]' '[:lower:]')
             IMAGE="$DOCKER_HUB_USERNAME/${SERVICE_LOWER}-grpc"
-            docker build -t $IMAGE:$VERSION_TAG -f ./src/Services/$SERVICE/${SERVICE}.Grpc/Dockerfile .
+            docker build -t $IMAGE:$VERSION_TAG -f ./src/Services/$SERVICE/${SERVICE}.Grpc/Dockerfile ./src
             docker push $IMAGE:$VERSION_TAG
           done
 
@@ -79,7 +79,7 @@ jobs:
           for SERVICE in $API_SERVICES; do
             SERVICE_LOWER=$(echo $SERVICE | tr '[:upper:]' '[:lower:]')
             IMAGE="$DOCKER_HUB_USERNAME/${SERVICE_LOWER}-api"
-            docker build -t $IMAGE:$VERSION_TAG -f ./src/Services/$SERVICE/${SERVICE}.API/Dockerfile .
+            docker build -t $IMAGE:$VERSION_TAG -f ./src/Services/$SERVICE/${SERVICE}.API/Dockerfile ./src
             docker push $IMAGE:$VERSION_TAG
           done
 
@@ -92,7 +92,7 @@ jobs:
           for GATEWAY in $GATEWAYS; do
             GATEWAY_LOWER=$(echo $GATEWAY | tr '[:upper:]' '[:lower:]')
             IMAGE="$DOCKER_HUB_USERNAME/$GATEWAY_LOWER"
-            docker build -t $IMAGE:$VERSION_TAG -f ./src/ApiGateways/$GATEWAY/Dockerfile .
+            docker build -t $IMAGE:$VERSION_TAG -f ./src/ApiGateways/$GATEWAY/Dockerfile ./src
             docker push $IMAGE:$VERSION_TAG
           done
 
