--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 env:
-  API_SERVICES: "Catalog Basket Order"
+  API_SERVICES: "Catalog Basket Ordering"
   GRPC_SERVICES: "Discount"
   GATEWAYS: "YarpApiGateway"
   CHART_DIR: ./helm
